--- a/modules/secure_private_server/playbook.yaml
+++ b/modules/secure_private_server/playbook.yaml
@@ -2,12 +2,47 @@
   hosts: all
   gather_facts: false
   become: true
+  handlers:
+    - name: Restart sshd
+      ansible.builtin.service:
+        name: sshd
+        state: restarted
+        
   tasks:
+    - name: Change SSH port
+      ansible.builtin.lineinfile:
+        dest: /etc/ssh/sshd_config
+        regexp: "^#?Port"
+        line: "Port {{ ssh_port }}"
+      notify: "Restart sshd"
+    - name: Disable SSH root login
+      ansible.builtin.lineinfile:
+        dest: /etc/ssh/sshd_config
+        regexp: "^#?PermitRootLogin"
+        line: "PermitRootLogin no"
+      notify:
+        - Restart sshd
+    - name: Disable passwd login
+      ansible.builtin.lineinfile:
+        dest: /etc/ssh/sshd_config
+        regexp: "^#?PasswordAuthentication"
+        line: "PasswordAuthentication no"
+      notify:
+        - Restart sshd
     - name: Enable SSH key authentication for user
       ansible.posix.authorized_key:
         user: "{{ ansible_user }}"
         state: present
         key: "{{ public_key }}"
+    - name: Apply SSH configuration changes
+      ansible.builtin.meta: flush_handlers
+    - name: Change root password
+      ansible.builtin.user:
+        name: root
+        state: present
+        password: "{{ new_root_password | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string) }}"
+      vars:
+        new_root_password: "{{ lookup('ansible.builtin.password', '/dev/null', seed='{{ inventory_hostname }}-root-password') }}"
     - name: Change password for existing user
       ansible.builtin.user:
         name: "{{ ansible_user }}"
