--- a/modules/setup_cluster/firewall.yaml
+++ b/modules/setup_cluster/firewall.yaml
@@ -1,7 +1,7 @@
 # This playbook is designed for Ubuntu 24.04 or newer servers to set up a firewall using nftables.
 - name: Configure Firewall
   hosts: all
-  gather_facts: false
+  gather_facts: true
   become: true
 
   handlers:
