feat: update kubeconfig path and traefik chart version for improved configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "vs-kubernetes": {
-        "vs-kubernetes.kubeconfig": "./.kube/admin-config"
+        "vs-kubernetes.kubeconfig": "${workspaceFolder}/.kube/admin-config"
     }
 }
