--- a/modules/setup_cluster/secure_private_server.yaml
+++ b/modules/setup_cluster/secure_private_server.yaml
@@ -3,6 +3,9 @@
   gather_facts: false
   become: true
 
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+
   handlers:
     - name: Restart SSH service
       ansible.builtin.systemd_service:
